# MulleCurl

./: .gitignore  .touch  AGENTS.md  CMakeLists.txt  MulleCurl.sublime-project  MulleObjCCurlFoundation.sublime-workspace  README.md  RELEASENOTES.md  clib.json  package.json
.travis.d/: PACKAGES.linux
cmake/: Headers.cmake  _Dependencies.cmake  _Headers.cmake  _Libraries.cmake  _Sources.cmake
cola/: acknowledgements.md.bud  description.md.bud  properties.plist  usage.md.bud
craftinfo/curl-craftinfo/: CMakeLists.txt  README.md
craftinfo/curl-craftinfo/definition.windows/set/: CMAKEFLAGS
craftinfo/curl-craftinfo/definition/plus/: CMAKEFLAGS
craftinfo/curl-craftinfo/definition/set/: CMAKEFLAGS
src/: MulleCurl+ClassMethods.m  MulleCurl+Private.h  MulleCurl+Private.m  MulleCurl.h  MulleCurl.m  MulleCurlFoundation.h  MulleCurlParser.h  MulleHTTPHeaderParser.h  MulleHTTPHeaderParser.m  MulleObjCCurl+Private.h  MulleObjCCurl+Private.m  MulleObjCCurl.h  MulleObjCCurl.m  MulleObjCCurlFoundation-shlib.m  MulleObjCCurlFoundation.h  MulleObjCCurlFoundation.m  MulleObjCCurlParser.h  MulleObjCDeps+MulleCurl.h  MulleObjCDeps+MulleCurl.m  MulleObjCHTTPHeaderParser.h  MulleObjCHTTPHeaderParser.m  MulleObjCLoader+MulleCurl.h  MulleObjCLoader+MulleCurl.m  MulleObjCLoader+MulleObjCCurlFoundation.h  MulleObjCLoader+MulleObjCCurlFoundation.m  NSMutableData+MulleCurlParser.h  NSMutableData+MulleCurlParser.m  _MulleCurl-import-private.h  _MulleCurl-import.h  _MulleCurl-include-private.h  _MulleCurl-include.h  _MulleCurlFoundation-import-private.h  _MulleCurlFoundation-import.h  (+8 more)
(+52 files in other folders)
